# EMV-Scripts

./: .gitignore  README  README.md  crontab.txt
emv-tools/: .coveragerc  README.md  params.xmd  program.py  pyproject.toml
emv-tools/docs/: interacting_with_xmipp.md
emv-tools/docs/source/: api.rst  conf.py  index.rst
emv-tools/docs/source/examples/: blocres_eval.ipynb  fscq_eval.ipynb  params.xmd  visualization.ipynb
emv-tools/docs/source/examples/utils/: download.py
emv-tools/docs/source/notebooks/: visualization.ipynb
emv-tools/docs/source/scipion_bridge/: foreign_functions.rst  index.rst  proxies.rst
emv-tools/src/: params.xmd
emv-tools/src/emv_tools/: __init__.py  convert_eval_results.py  deep_res.py  download.py  metadata.py
emv-tools/src/emv_tools/ffi/: blocres.py  scipion.py  utils.py
emv-tools/src/emv_tools/lib/: xmipp.py
emv-tools/src/emv_tools/scipion_bridge/: __init__.py  external_call.py  proxy.py
emv-tools/src/emv_tools/scipion_bridge/environment/: cmd_exec.py
emv-tools/src/emv_tools/utils/: bws.py  conversion.py  external_call.py  extract_chains.py  find_files.py  func_params.py  notes  proxy.py  scipion.py  validate_pdb.py
emv-tools/src/emv_tools/utils/providers/: cmd_exec.py  container.py  temp_files.py
emv-tools/tests/scipion_bridge/: test_cmd_exec.py  test_external_call.py  test_proxy.py
tools/: batch_fscq_to_json.py  batch_localres_to_json.py  batch_mapq_to_json.py  calcUpdates.py  calc_updates_batch.py  compare_fscq_mapq.py  convert_daQvol_to_json.py  convert_deepres_to_aapdb.py  convert_fscq_to_aapdb.py  getPBDFiles.py  (+28 more)
(+5 files in other folders)
