[project]
name = "emv-tools"
version = "0.1.0"
description = "A Python tool to convert validation data on VRS to a format compatible with 3DBionotes"
authors = [{ name = "Max Zoech", email = "maximilian.zoech@cnb.csic.es" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["dependency-injector (>=4.48.1,<5.0.0)"]

[tool.poetry]
packages = [{ include = "emv_tools", from = "src" }]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-mock = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
